src/components/VisualizationTypeSelector/styles/VisualizationTypeSelector.module.css
.arrowIcon {
    display: flex;
    margin-inline-start: auto;
}

.arrowIcon.listIsOpen {
    transform: rotate(180deg);
}

.button {
    padding-block-start: 7px;
    padding-block-end: 7px;
    padding-inline-start: var(--spacers-dp8);
    padding-inline-end: var(--spacers-dp8);
    display: flex;
    align-items: center;
    justify-content: flex-start;
    background-color: var(--colors-white);
    cursor: pointer;
    flex-grow: 1;
}

.button:hover,
.button.listIsOpen {
    background-color: var(--colors-grey200);
}

.button > .selectedVizTypeLabel {
    font-size: 14px;
    padding-block-start: 1px;
    user-select: none;
    color: var(--colors-grey900);
    margin-inline-start: 4px;
}

.cardContainer {
    margin-block-start: 1px;
    margin-block-end: 1px;
    margin-inline-start: 0;
    margin-inline-end: 0;
    min-block-size: 200px;
}

.listContainer {
    max-block-size: 85vh;
    overflow: scroll;
    max-inline-size: 896px;
    box-shadow: var(--elevations-e400);
    border-radius: 3px;
    padding-block-start: 12px;
    padding-block-end: 12px;
    padding-inline-start: 16px;
    padding-inline-end: 16px;
    background: var(--colors-white);
}

.listSection {
    display: flex;
    flex-wrap: wrap;
}

.listItem {
    inline-size: 280px;
    background: #fff;
    border: 1px solid var(--colors-grey300);
    border-radius: 3px;
    padding: var(--spacers-dp8);
    display: flex;
    align-items: flex-start;
    margin-block-end: var(--spacers-dp8);
    cursor: pointer;
}

.listItem:nth-child(3n + 1) {
    margin-inline-end: var(--spacers-dp8);
}

.listItem:nth-child(3n + 3) {
    margin-inline-start: var(--spacers-dp8);
}

.listItem:hover {
    background: var(--colors-grey050);
    border-color: var(--colors-grey400);
}

.listItemActive,
.listItemActive:hover {
    background: var(--colors-teal050);
    border: 2px solid var(--colors-teal300);
}

.listItemDisabled {
    opacity: 0.5;
    cursor: not-allowed;
}

.listItemDisabled:hover {
    background-color: transparent;
}

.listItemSvg {
    inline-size: var(--spacers-dp48);
    block-size: var(--spacers-dp48);
}

.listItemIcon {
    inline-size: 48px;
    block-size: 48px;
    margin-inline-end: var(--spacers-dp8);
}

.listItemName {
    font-size: 14px;
    font-weight: 500;
    margin-block-start: 4px;
    margin-block-end: 4px;
    margin-inline-start: 0;
    margin-inline-end: 0;
}

.listItemDescription {
    font-size: 12px;
    color: var(--colors-grey700);
    margin: 0;
    line-height: 1.4;
}

